fix some spacing

--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,5 @@
 html {
-  font-family: 'Overpass', sans-serif;
+  font-family: "Overpass", sans-serif;
   color: #ffffff;
 }
 
@@ -23,6 +23,10 @@ body {
   border-color: #fff;
 }
 
-.unit {
-  border-right: 1px solid #fff;
+.separate {
+  border-bottom: 1px solid #fff;
+}
+
+svg {
+  color: white;
 }
